@@ -60,6 +60,25 @@
                 <artifactId>proactor</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.32</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.tinylog</groupId>
+                <artifactId>slf4j-tinylog</artifactId>
+                <version>2.4.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.tinylog</groupId>
+                <artifactId>tinylog-impl</artifactId>
+                <version>2.4.1</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -107,6 +126,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M5</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
+                        <argLine>--enable-preview</argLine>
+                        <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -122,6 +147,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.22.1</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -145,12 +173,8 @@
                     <target>${java.release}</target>
                     <compilerArgs>
                         <arg>${java.enable-preview}</arg>
-<!--                        <arg>&#45;&#45;add-modules</arg>-->
-<!--                        <arg>jdk.incubator.foreign</arg>-->
                         <arg>--add-exports</arg>
                         <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-<!--                        <arg>&#45;&#45;add-exports</arg>-->
-<!--                        <arg>jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED</arg>-->
                     </compilerArgs>
                 </configuration>
             </plugin>
